@@ -1,1 +1,1 @@
-4.5.4-beta03
+4.5.4-beta04
