@@ -114,8 +114,8 @@ Octave TeXInfo manual shows clean TeXInfo structure
 @setfilename nco.info
 
 @c Define edition, date, ...
-@set nco-edition 4.5.4-beta03
-@set doc-edition 4.5.4-beta03
+@set nco-edition 4.5.4-beta04
+@set doc-edition 4.5.4-beta04
 @set copyright-years 1995--2015
 @set update-year 2015
 @set update-date 31 December 2015
